--- a/local.yml
+++ b/local.yml
@@ -9,3 +9,5 @@
        changed_when: False
    tasks:
      - include: tasks/packages.yml
+     - include: tasks/cron.yml
+     - include: tasks/packages.yml
