--- a/local.yml
+++ b/local.yml
@@ -8,6 +8,6 @@
          update_cache: yes
        changed_when: False
    tasks:
-     - include: tasks/packages.yml
+     - include: tasks/users.yml
      - include: tasks/cron.yml
      - include: tasks/packages.yml
